[metadata]
name = fhir-types
description = Types for FHIR Resources
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
author = Anthem Inc
keywords =
    FHIR

[options]
packages = find:
package_dir = =src
python_requires = >= 3.8

[options.packages.find]
where = src

[options.package_data]
fhir_types =
    py.typed
